--- a/InplayBet.Web/InplayBet.Web.csproj
+++ b/InplayBet.Web/InplayBet.Web.csproj
@@ -174,6 +174,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="App_Start\Filters.cs" />
     <Compile Include="App_Start\InjectorInitializer.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -211,6 +212,9 @@
     <Compile Include="Data\Context\Challenge.cs">
       <DependentUpon>InplayBetDBEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="Data\Context\Currency.cs">
+      <DependentUpon>InplayBetDBEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Data\Context\InplayBetDBEntities.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -229,6 +233,9 @@
     <Compile Include="Data\Context\Legue.cs">
       <DependentUpon>InplayBetDBEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="Data\Context\Report.cs">
+      <DependentUpon>InplayBetDBEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Data\Context\Status.cs">
       <DependentUpon>InplayBetDBEntities.tt</DependentUpon>
     </Compile>
@@ -245,7 +252,9 @@
     <Compile Include="Data\Implementation\BetDataRepository.cs" />
     <Compile Include="Data\Implementation\BookMakerDataRepository.cs" />
     <Compile Include="Data\Implementation\ChallengeDataRepository.cs" />
+    <Compile Include="Data\Implementation\CurrencyDataRepository.cs" />
     <Compile Include="Data\Implementation\LegueDataRepository.cs" />
+    <Compile Include="Data\Implementation\ReportDataRepository.cs" />
     <Compile Include="Data\Implementation\TeamDataRepository.cs" />
     <Compile Include="Data\Implementation\UserDataRepository.cs" />
     <Compile Include="Data\Interface\Base\IQueryableUnitOfWork.cs" />
@@ -256,7 +265,9 @@
     <Compile Include="Data\Interface\IBetDataRepository.cs" />
     <Compile Include="Data\Interface\IBookMakerDataRepository.cs" />
     <Compile Include="Data\Interface\IChallengeDataRepository.cs" />
+    <Compile Include="Data\Interface\ICurrencyDataRepository.cs" />
     <Compile Include="Data\Interface\ILegueDataRepository.cs" />
+    <Compile Include="Data\Interface\IReportDataRepository.cs" />
     <Compile Include="Data\Interface\ITeamDataRepository.cs" />
     <Compile Include="Data\Interface\IUserDataRepository.cs" />
     <Compile Include="Global.asax.cs">
@@ -276,7 +287,10 @@
     <Compile Include="Models\BetModel.cs" />
     <Compile Include="Models\BookMakerModel.cs" />
     <Compile Include="Models\ChallengeModel.cs" />
+    <Compile Include="Models\CurrencyModel.cs" />
     <Compile Include="Models\LegueModel.cs" />
+    <Compile Include="Models\ReportModel.cs" />
+    <Compile Include="Models\SignInModel.cs" />
     <Compile Include="Models\StatusModel.cs" />
     <Compile Include="Models\TeamModel.cs" />
     <Compile Include="Models\UserModel.cs" />
@@ -326,6 +340,8 @@
     <None Include="Properties\PublishProfiles\Publish.pubxml" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Scripts\AppScripts\ChallengeManager.js" />
+    <Content Include="Scripts\AppScripts\RegistrationManager.js" />
+    <Content Include="Scripts\jquery.fs.boxer.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Styles\images\banner.jpg" />
@@ -412,6 +428,7 @@
     <Content Include="Views\Bet\GetChallenges.cshtml" />
     <Content Include="Views\Bet\GetBetsByChallenge.cshtml" />
     <Content Include="Views\Bet\GetChallengesByUser.cshtml" />
+    <Content Include="Views\Shared\_SignIn.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
