--- a/InplayBet.Web/Web.config
+++ b/InplayBet.Web/Web.config
@@ -20,8 +20,9 @@
     <add key="VirtualDirectory" value="" />
     <add key="JsMinify" value="false" />
     <add key="CssMinify" value="false" />
-    <add key="StartingBetAmount" value="20"/>
-    <add key="WiningBetAmount" value="1000"/>
+    <add key="StartingBetAmount" value="20" />
+    <add key="WiningBetAmount" value="1000" />
+    <add key="EnableUserMailActivation" value="true"/>
     <!--Mail Settings Starts-->
     <add key="MAIL_SERVER" value="smtp.gmail.com" />
     <add key="MAIL_SERVER_PORT" value="587" />
