--- a/InplayBet.Web/Web.config
+++ b/InplayBet.Web/Web.config
@@ -22,7 +22,7 @@
     <add key="CssMinify" value="false" />
     <add key="StartingBetAmount" value="20" />
     <add key="WiningBetAmount" value="1000" />
-    <add key="EnableUserMailActivation" value="true"/>
+    <add key="EnableUserMailActivation" value="false"/>
     <!--Mail Settings Starts-->
     <add key="MAIL_SERVER" value="smtp.gmail.com" />
     <add key="MAIL_SERVER_PORT" value="587" />
