--- a/InplayBet.Web/Web.config
+++ b/InplayBet.Web/Web.config
@@ -23,6 +23,11 @@
     <add key="StartingBetAmount" value="20" />
     <add key="WiningBetAmount" value="1000" />
     <add key="EnableUserMailActivation" value="false"/>
+    <add key="DefaultRankPageSize" value="10"/>
+    <add key="DefaultMamberPageSize" value="10"/>
+    <add key="DefaultWiningBetPegSize" value="10"/>
+    <add key="DefaultWiningMemberPegSize" value="10"/>
+    <add key="DefaultLeaderboardPegSize" value="10"/>
     <!--Mail Settings Starts-->
     <add key="MAIL_SERVER" value="smtp.gmail.com" />
     <add key="MAIL_SERVER_PORT" value="587" />
