--- a/InplayBet.Web/Web.config
+++ b/InplayBet.Web/Web.config
@@ -7,7 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    
+
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -53,13 +53,9 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
       </namespaces>
-      
     </pages>
-    
-    
   </system.web>
   <system.webServer>
-    
     <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
@@ -68,8 +64,6 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-      
-      
     </handlers>
   </system.webServer>
   <runtime>
@@ -107,8 +101,10 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayBet;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SKYDELL-12-19\SQLSERVER2008;initial catalog=InplayBet;persist security info=True;user id=sa;password=P@ssw0rd;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayServerCopy;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayBet;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SKYDELL-12-19\SQLSERVER2008;initial catalog=InplayBet;persist security info=True;user id=sa;password=P@ssw0rd;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=79.170.40.194;initial catalog=InplayBet;persist security info=True;user id=mssql2_inplay_1;password=inplay;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
-  
+
 </configuration>
