--- a/InplayBet.Web/Web.config
+++ b/InplayBet.Web/Web.config
@@ -16,6 +16,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="CommandTimeout" value="60"/>
     <add key="EnableErrorLog" value="true" />
     <add key="ErrorLogFolder" value="ErrorLogs" />
     <add key="VirtualDirectory" value="" />
