--- a/InplayBet.Web/InplayBet.Web.csproj
+++ b/InplayBet.Web/InplayBet.Web.csproj
@@ -484,6 +484,8 @@
     <Content Include="Views\Bet\ShowReportWindow.cshtml" />
     <Content Include="Views\Shared\_ImageCroper.cshtml" />
     <Content Include="Views\Reporting\Index.cshtml" />
+    <Content Include="Views\Shared\_SimpleMessage.cshtml" />
+    <Content Include="Views\Follow\ShowFollowingUsers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
