--- a/InplayBet.Web/Web.config
+++ b/InplayBet.Web/Web.config
@@ -31,12 +31,13 @@
     <add key="DefaultWiningMemberPegSize" value="10" />
     <add key="DefaultLeaderboardPegSize" value="10" />
     <!--Mail Settings Starts-->
-    <add key="MAIL_SERVER" value="smtp.gmail.com" />
-    <add key="MAIL_SERVER_PORT" value="587" />
-    <add key="MAIL_SERVER_SSL" value="true" />
-    <add key="MAIL_SENDER_UID" value="sandipghosh.dev@gmail.com" />
-    <add key="MAIL_SENDER_PWD" value="sandev@#1984" />
-    <add key="MAIL_SENDER_FROM" value="Inplay Team" />
+    <add key="MAIL_SERVER" value="mail.inplay20.com" />
+    <add key="MAIL_SERVER_PORT" value="25" />
+    <add key="MAIL_SERVER_SSL" value="false" />
+    <add key="MAIL_SENDER_UID" value="admin@inplay20.co.uk" />
+    <add key="MAIL_SENDER_PWD" value="JyqtGkyM!" />
+    <add key="MAIL_SENDER_FROM" value="Inplay20 Team" />
+    <add key="MAIL_SENDER_RECIPIENT" value="info@inplay20.co.uk" />
     <!--Mail Settings Ends-->
   </appSettings>
   <system.web>
