--- a/InplayBet.Web/Web.config
+++ b/InplayBet.Web/Web.config
@@ -31,6 +31,7 @@
     <add key="DefaultWiningMemberPegSize" value="10" />
     <add key="DefaultLeaderboardPegSize" value="10" />
     <!--Mail Settings Starts-->
+    <add key="MAIL_ENABLE" value="false" />
     <add key="MAIL_SERVER" value="mail.inplay20.com" />
     <add key="MAIL_SERVER_PORT" value="25" />
     <add key="MAIL_SERVER_SSL" value="false" />
