--- a/InplayBet.Web/Web.config
+++ b/InplayBet.Web/Web.config
@@ -36,7 +36,7 @@
     <add key="MAIL_SERVER_PORT" value="25" />
     <add key="MAIL_SERVER_SSL" value="false" />
     <add key="MAIL_SENDER_UID" value="admin@inplay20.co.uk" />
-    <add key="MAIL_SENDER_PWD" value="JyqtGkyM!" />
+    <add key="MAIL_SENDER_PWD" value="inplay@admin" />
     <add key="MAIL_SENDER_FROM" value="Inplay20 Team" />
     <add key="MAIL_SENDER_RECIPIENT" value="info@inplay20.co.uk" />
     <!--Mail Settings Ends-->
