--- a/InplayBet.Web/Web.config
+++ b/InplayBet.Web/Web.config
@@ -24,21 +24,29 @@
     <add key="CssMinify" value="false" />
     <add key="StartingBetAmount" value="20" />
     <add key="WiningBetAmount" value="1000" />
-    <add key="EnableUserMailActivation" value="false" />
+    <add key="EnableUserMailActivation" value="true" />
     <add key="DefaultRankPageSize" value="10" />
     <add key="DefaultMamberPageSize" value="10" />
     <add key="DefaultWiningBetPegSize" value="10" />
     <add key="DefaultWiningMemberPegSize" value="10" />
     <add key="DefaultLeaderboardPegSize" value="10" />
     <!--Mail Settings Starts-->
-    <add key="MAIL_ENABLE" value="false" />
-    <add key="MAIL_SERVER" value="mail.inplay20.com" />
-    <add key="MAIL_SERVER_PORT" value="25" />
+    <!--<add key="MAIL_ENABLE" value="true" />
+    <add key="MAIL_SERVER" value="79.170.40.153" />
+    <add key="MAIL_SERVER_PORT" value="587" />
     <add key="MAIL_SERVER_SSL" value="false" />
-    <add key="MAIL_SENDER_UID" value="admin@inplay20.co.uk" />
+    <add key="MAIL_SENDER_UID" value="admin@inplay20.com" />
     <add key="MAIL_SENDER_PWD" value="inplay@admin" />
     <add key="MAIL_SENDER_FROM" value="Inplay20 Team" />
-    <add key="MAIL_SENDER_RECIPIENT" value="info@inplay20.co.uk" />
+    <add key="MAIL_SENDER_RECIPIENT" value="info@inplay20.com" />-->
+    <add key="MAIL_ENABLE" value="true" />
+    <add key="MAIL_SERVER" value="smtp.gmail.com" />
+    <add key="MAIL_SERVER_PORT" value="587" />
+    <add key="MAIL_SERVER_SSL" value="true" />
+    <add key="MAIL_SENDER_UID" value="inplayhelp@gmail.com" />
+    <add key="MAIL_SENDER_PWD" value="gTstzFz9me6G@" />
+    <add key="MAIL_SENDER_FROM" value="Inplay20 Team" />
+    <add key="MAIL_SENDER_RECIPIENT" value="info@inplay20.com" />
     <!--Mail Settings Ends-->
   </appSettings>
   <system.web>
