--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,5 @@ $RECYCLE.BIN/
 .DS_Store
 /InplayBet/
 /InplayBet.Release
+/InplayBet.Web/Media/Inplay20-HowTo.mp4
+/InplayBet.Web/Images/Users/7/User1.jpg
