--- a/InplayBet.Web/packages.config
+++ b/InplayBet.Web/packages.config
@@ -7,6 +7,7 @@
   <package id="jQuery.Migrate" version="1.2.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net40" />
   <package id="jQuery.Validation.Unobtrusive" version="2.0.20710.0" targetFramework="net40" />
+  <package id="Lib.Web.Mvc" version="6.5.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.40804.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
