--- a/InplayBet.Web/InplayBet.Web.csproj
+++ b/InplayBet.Web/InplayBet.Web.csproj
@@ -55,6 +55,9 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.2\lib\net40\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Lib.Web.Mvc">
+      <HintPath>..\packages\Lib.Web.Mvc.6.5.0\lib\net40\Lib.Web.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="MoreLinq">
       <HintPath>..\packages\morelinq.2.0.0-alpha01\lib\net35\MoreLinq.dll</HintPath>
@@ -346,6 +349,7 @@
     <Compile Include="Utilities\OptimizationExtensions.cs" />
     <Compile Include="Utilities\SessionVeriables.cs" />
     <Compile Include="Utilities\SharedFunctionality.cs" />
+    <Compile Include="Utilities\VideoResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -393,8 +397,12 @@
     <Content Include="Areas\Admin\Views\Shared\_GridGlobalMaster.cshtml" />
     <Content Include="Areas\Admin\Views\CheatReport\Index.cshtml" />
     <Content Include="Areas\Admin\Views\SummaryReport\Index.cshtml" />
+    <Content Include="Media\Inplay20-HowTo.swf" />
+    <Content Include="Media\Inplay20-HowTo_VP8.webm" />
+    <Content Include="Media\Inplay20-HowTo_libtheora.ogv" />
     <None Include="Properties\PublishProfiles\Publish.pubxml" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
+    <Content Include="Media\Inplay20-HowTo_x264.mp4" />
     <Content Include="Scripts\AppScripts\ChallengeManager.js" />
     <Content Include="Scripts\AppScripts\RankingManager.js" />
     <Content Include="Scripts\AppScripts\RegistrationManager.js" />
