--- a/InplayBet.Web/Web.config
+++ b/InplayBet.Web/Web.config
@@ -31,14 +31,6 @@
     <add key="DefaultWiningMemberPegSize" value="10" />
     <add key="DefaultLeaderboardPegSize" value="100" />
     <!--Mail Settings Starts-->
-    <!--<add key="MAIL_ENABLE" value="true" />
-    <add key="MAIL_SERVER" value="79.170.40.153" />
-    <add key="MAIL_SERVER_PORT" value="587" />
-    <add key="MAIL_SERVER_SSL" value="false" />
-    <add key="MAIL_SENDER_UID" value="admin@inplay20.com" />
-    <add key="MAIL_SENDER_PWD" value="inplay@admin" />
-    <add key="MAIL_SENDER_FROM" value="Inplay20 Team" />
-    <add key="MAIL_SENDER_RECIPIENT" value="info@inplay20.com" />-->
     <add key="MAIL_ENABLE" value="true" />
     <add key="MAIL_SERVER" value="smtp.gmail.com" />
     <add key="MAIL_SERVER_PORT" value="587" />
@@ -112,8 +104,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayServerCopy;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayBet;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayServerCopy;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayBet;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SKYDELL-12-19\SQLSERVER2008;initial catalog=InplayBet;persist security info=True;user id=sa;password=P@ssw0rd;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=79.170.40.194;initial catalog=InplayBet;persist security info=True;user id=mssql2_inplay_1;password=inplay;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
